package app;

import app.gui.Dashboard;

public class Main {
    public static void main(String[] args) {
        Dashboard db = new Dashboard();
    }
}